--- a/src/content/hello-world.mdx
+++ b/src/content/hello-world.mdx
@@ -7,4 +7,12 @@ excerpt: "This is my first post, powered by Next.js and MDX."
 
 ## Welcome to My Blog
 
-This is your first post!
+This is your first **MDX-powered** blog post.
+
+- Supports lists
+- Markdown **formatting**
+- Inline `code`
+
+```js
+console.log("Code block coming soon!")
+```
